// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messageGenerator > generateMessageFile > generates a message file with no fields 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_TriggerSync")]
	public partial class COntoSo_TriggerSyncRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
		}
		
		public const string ActionLogicalName = "contoso_TriggerSync";
		
		public COntoSo_TriggerSyncRequest()
		{
			this.RequestName = "contoso_TriggerSync";
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_TriggerSync")]
	public partial class COntoSo_TriggerSyncResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public const string ActionLogicalName = "contoso_TriggerSync";
		
		public COntoSo_TriggerSyncResponse()
		{
		}
	}
}
#pragma warning restore CS1591
"
`;

exports[`messageGenerator > generateMessageFile > generates a single message file with request and response fields 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
			public const string OpportunityId = "OpportunityId";
			public const string OverriderAte = "OverrideRate";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public System.Guid? OpportunityId
		{
			get
			{
				if (this.Parameters.Contains("OpportunityId"))
				{
					return ((System.Guid)(this.Parameters["OpportunityId"]));
				}
				else
				{
					return default(System.Guid);
				}
			}
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		public System.Nullable<decimal>? OverriderAte
		{
			get
			{
				if (this.Parameters.Contains("OverrideRate"))
				{
					return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.OpportunityId = default(System.Guid);
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public ConToSo_CalculateCommissionResponse()
		{
		}
	}
}
#pragma warning restore CS1591
"
`;

exports[`messageGenerator > generateMessagesFile > generates a combined messages file 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{

	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
			public const string OpportunityId = "OpportunityId";
			public const string OverriderAte = "OverrideRate";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public System.Guid? OpportunityId
		{
			get
			{
				if (this.Parameters.Contains("OpportunityId"))
				{
					return ((System.Guid)(this.Parameters["OpportunityId"]));
				}
				else
				{
					return default(System.Guid);
				}
			}
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		public System.Nullable<decimal>? OverriderAte
		{
			get
			{
				if (this.Parameters.Contains("OverrideRate"))
				{
					return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.OpportunityId = default(System.Guid);
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public ConToSo_CalculateCommissionResponse()
		{
		}
	}

	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_TriggerSync")]
	public partial class COntoSo_TriggerSyncRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
		}
		
		public const string ActionLogicalName = "contoso_TriggerSync";
		
		public COntoSo_TriggerSyncRequest()
		{
			this.RequestName = "contoso_TriggerSync";
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_TriggerSync")]
	public partial class COntoSo_TriggerSyncResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public const string ActionLogicalName = "contoso_TriggerSync";
		
		public COntoSo_TriggerSyncResponse()
		{
		}
	}
}
#pragma warning restore CS1591"
`;
